[WIP] Fixing horizontal overflow issues and cards size

--- a/src/app/disciplinas/styles.css
+++ b/src/app/disciplinas/styles.css
@@ -1,5 +1,5 @@
 .body {
-    height: 100vh;
+    height: 80vh;
     width: 100vw;
     background-color: rgba(217, 217, 217, 1);
 }
@@ -20,4 +20,5 @@
     flex-direction: row;
     gap: 3vw;
     height: 80%;
+    width: 100%;
 }
