--- a/src/components/SemestreContainer/index.css
+++ b/src/components/SemestreContainer/index.css
@@ -26,7 +26,6 @@
 
 .cardContainer{
     height: 15vh;
-    width: 100%;
+    width: 80%;
     margin: 2vh 2vw;
-
 }
